# dongle

./: CMakeLists.txt  README.md
src/: Core.cpp  main.c  main.cpp
src/include/: Core.hpp  debug.h  debug.hpp
